--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- --------- CSS ---------- -->
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <!-- --------- FAVICON ---------- -->
-    <link rel="shortcut icon" href="assets/images/favicon.png" type="image/x-icon">
+    
 
     <title>Portfolio | Ludiflex</title>
 </head>
@@ -20,7 +19,7 @@
     <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-            <p class="nav-name">Doe</p>
+            <p class="nav-name">Amarnath S S</p>
             <span>.</span>
         </div>
         <div class="nav-menu" id="myNavMenu">
