--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           <div class="featured-image">
             <div class="image">
-              <img src="assets/images/avatar.png" alt="avatar" />
+              <img src="assets/images/avater.jpg" alt="avatar" />
             </div>
           </div>
           <div class="scroll-icon-box">
