--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             </a>
             <a
               class="project-box"
-              href="https://to-do-list-omega-one-54.vercel.app/"
+              href=""
               target="_blank"
             >
               <div>
