chnaged  the porjetc image

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           >
             <div>
               <!-- <i class="uil uil-users-alt"></i> -->
-              <img src="./assets/images/project2.png" alt="" width="300px" />
+              <img src="./assets/images/Screenshot 2024-12-29 100203.png" alt="" width="300px" />
               <h3>Sportify UI clone</h3>
               <label>clone of Sportify using HTML , CSS , JS</label>
             </div>
