--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </ul>
         </div>
         <div class="nav-button">
-            <button class="btn" onclick="window.location.href=' https://drive.google.com/file/d/14jq_aqPxpS14xv3FSk3zfacBY3XkWR2e/view?usp=sharing'">
+            <button class="btn" onclick="window.location.href='https://drive.google.com/uc?export=download&id=14jq_aqPxpS14xv3FSk3zfacBY3XkWR2e '">
                 Download CV <i class="uil uil-file-alt"></i>
               </button>
         </div>
@@ -82,7 +82,7 @@
             </div>
             <div class="featured-text-btn">
               <button class="btn blue-btn">Hire Me</button>
-              <button class="btn" onclick="window.open('https://drive.google.com/file/d/1X9pI0ub2krmEg-XKxOearvw1aKCO9ldO/view?usp=sharing', '_blank')">
+              <button class="btn" onclick="window.open('https://drive.google.com/file/d/14jq_aqPxpS14xv3FSk3zfacBY3XkWR2e/view?usp=sharing', '_blank')">
                 Open CV <i class="uil uil-file-alt"></i>
               </button>
             </div>
@@ -128,7 +128,7 @@
                   and scalable full-stack applications.
                 </p>
                 <div class="about-btn">
-                  <button class="btn" onclick="window.open('https://drive.google.com/file/d/14jq_aqPxpS14xv3FSk3zfacBY3XkWR2e/view?usp=sharing', '_blank')">
+                  <button class="btn" onclick="window.open('https://drive.google.com/file/d/1X9pI0ub2krmEg-XKxOearvw1aKCO9ldO/view?usp=sharing', '_blank')">
                     Open CV <i class="uil uil-import"></i>
                   </button>
                 </div>
