--- a/index.html
+++ b/index.html
@@ -214,8 +214,8 @@
               <div>
                 <!-- <i class="uil uil-award"></i> -->
                 <img src="./assets/images/project3.png" alt="" width="300px" />
-                <h3>TO-DO list</h3>
-                <label>TO-DO list using React and Context API</label>
+                <h3>PrepStack AI Assistant </h3>
+              <label>PrepStack AI Assistant — Personal Notes & Code Review Platform with Grok AI</label>
               </div>
             </a>
             <a
@@ -226,8 +226,8 @@
             <div>
               <!-- <i class="uil uil-users-alt"></i> -->
               <img src="./assets/images/Screenshot 2024-12-29 100203.png" alt="" width="300px" />
-              <h3>Sportify UI clone</h3>
-              <label>clone of Sportify using HTML , CSS , JS</label>
+              <h3>Taxi Booking App</h3>
+              <label>Full-Stack Taxi Booking App — Real-time location tracking, secure authentication, and smooth UI animations</label>
             </div>
           </a>
           </div>
