--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
             >
               <div>
                 <!-- <i class="uil uil-award"></i> -->
-                <img src="./assets/images/project3.png" alt="" width="300px" />
+                <img src="./assets/images/PrepStack Ai.png" alt="" width="300px" />
                 <h3>PrepStack AI Assistant </h3>
               <label>PrepStack AI Assistant — Personal Notes & Code Review Platform with Grok AI</label>
               </div>
@@ -225,7 +225,7 @@
           >
             <div>
               <!-- <i class="uil uil-users-alt"></i> -->
-              <img src="./assets/images/Screenshot 2024-12-29 100203.png" alt="" width="300px" />
+              <img src="./assets/images/Uber.png" alt="" width="300px" />
               <h3>Taxi Booking App</h3>
               <label>Full-Stack Taxi Booking App — Real-time location tracking, secure authentication, and smooth UI animations</label>
             </div>
