--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <div class="project-container">
             <a
               class="project-box"
-              href=" https://crop-and-fertilizer-recomendation-project-c4ql.onrender.com/"
+              href="https://orca-app-8jg99.ondigitalocean.app/"
               target="_blank"
             >
               <div>
@@ -220,12 +220,12 @@
             </a>
             <a
             class="project-box"
-            href=""
+            href="https://whale-app-8rmyo.ondigitalocean.app/?section=chat"
             target="_blank"
           >
             <div>
               <!-- <i class="uil uil-users-alt"></i> -->
-              <img src="./assets/images/Uber.png" alt="" width="300px" />
+              <img src="./assets/images/Uber.png" alt="" width="200px" height="150px" />
               <h3>Taxi Booking App</h3>
               <label>Full-Stack Taxi Booking App — Real-time location tracking, secure authentication, and smooth UI animations</label>
             </div>
