--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                   <span>CSS</span>
                   <span>Tailwind</span>
                   <span>JavaScript</span>
-
                   <span>React</span>
+                  <span>Web Socket</span>
                 </div>
                 <div  style="margin-top: 15px;"  class="skills-header">
                   <h3> languages </h3>
@@ -225,7 +225,7 @@
           >
             <div>
               <!-- <i class="uil uil-users-alt"></i> -->
-              <img src="./assets/images/Uber.png" alt="" width="300px" />
+              <img src="./assets/images/UBER@.png" alt="" width="300px" />
               <h3>Taxi Booking App</h3>
               <label>Full-Stack Taxi Booking App — Real-time location tracking, secure authentication, and smooth UI animations</label>
             </div>
