--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           >
             <div>
               <!-- <i class="uil uil-users-alt"></i> -->
-              <img src="./assets/images/UBER@.png" alt="" width="300px" />
+              <img src="./assets/images/UBER2.png" alt="" width="300px" />
               <h3>Taxi Booking App</h3>
               <label>Full-Stack Taxi Booking App — Real-time location tracking, secure authentication, and smooth UI animations</label>
             </div>
