--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
            
             <a
               class="project-box"
-              href="https://todo-liart-nine-42.vercel.app/"
+              href="https://whale-app-8rmyo.ondigitalocean.app/?section=chat
               target="_blank"
             >
               <div>
@@ -220,7 +220,7 @@
             </a>
             <a
             class="project-box"
-            href="https://whale-app-8rmyo.ondigitalocean.app/?section=chat"
+            href="https://github.com/Percyjackson-ck/Taxi-Booking-App"
             target="_blank"
           >
             <div>
